# genetic-algorithm-template

./: LICENSE  README.md  pyproject.toml  settings.py
example/: main.py  player.py
example_template/: main.py  player.py  runner.py  simulator.py
genetic_algorithm/: __init__.py  activation_functions.py  base_player.py  crossover.py  genome.py  layer.py  population.py  selection.py
genetic_algorithm/evolution/: crossover.py  mutation.py  selection.py
genetic_algorithm_template/: activation_functions.py  base_player.py  genome.py  layer.py  mutation.py  population.py
