[tool.poetry]
name = "genetic_algorithm"
version = "0.1.0"
description = "Template of implementation of the genetic algorithm on neural networks"
authors = ["RJW20"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
